--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
+#Other
+*.swp
+
 #Netbeans
-#nbproject/
+nbproject/
 build/
 
 ### OSX ###
@@ -34,3 +37,4 @@ Desktop.ini
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
+/2014 Robot/nbproject/private/
